svx/source/unodraw/unottabl.cxx
@@ -17,7 +17,7 @@
  *   the License at http://www.apache.org/licenses/LICENSE-2.0 .
  */
 
-#include <com/sun/star/awt/Gradient.hpp>
+#include <com/sun/star/awt/Gradient2.hpp>
 #include <svx/xflftrit.hxx>
 
 #include <svx/svdmodel.hxx>
@@ -71,7 +71,8 @@ NameOrIndex* SvxUnoTransGradientTable::createItem() const
 // XElementAccess
 uno::Type SAL_CALL SvxUnoTransGradientTable::getElementType()
 {
-    return cppu::UnoType<awt::Gradient>::get();
+    // tdf#158421 use newer extended type for the list
+    return cppu::UnoType<awt::Gradient2>::get();
 }
 
 /**
